Fixed text alignment issue on cards for xs screens

--- a/public/styles/sass/_index.scss
+++ b/public/styles/sass/_index.scss
@@ -575,7 +575,7 @@
     }
   }
   #feature1, #feature2, #feature3 {
-    h2, p, a {
+    h2, p, a.arrow {
       text-align: center;
     }
     h2, p {
